--- a/Model_and_analysis/Modelling.ipynb
+++ b/Model_and_analysis/Modelling.ipynb
@@ -2035,6 +2035,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "source": [
+    "import pickle\r\n",
+    "with open(\"regr_model\",\"wb\") as f:\r\n",
+    "    pickle.dump(regr,f)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "source": [
+    "with open(\"regr_model\",\"rb\") as f:\r\n",
+    "    est = pickle.load(f)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "source": [
+    "est.predict([[1,4500,12,1,1,0,0]])[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2339.5599418621973"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 93
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "source": [
     "importance = pd.DataFrame([pd.Series(regr.coef_),pd.Series(X.columns)]).T.sort_values(by = 0,ascending=False)\r\n",
@@ -2225,6 +2266,36 @@
     "    pickle.dump(estimator,f)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "source": [
+    "with open(\"best_estimator_poly\",\"rb\") as f:\r\n",
+    "    est = pickle.load(f)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "source": [
+    "est.predict([[1,4500,12,1,1,0,0]])[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "395020944328.68384"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 90
+    }
+   ],
    "metadata": {}
   },
   {
